--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,13 @@
 ---
-# listing:
-#  contents: posts
-#  sort: "date desc"
-#  type: default
-#  categories: true
-#  sort-ui: false
-#  filter-ui: false
+listing:
+ contents:
+ - posts
+ - posts/external.yml
+ sort: "date desc"
+ type: default
+ categories: true
+ sort-ui: false
+ filter-ui: false
 page-layout: full
 title-block-banner: true
 ---
